@@ -1,6 +1,6 @@
 Package: maptools
-Version: 0.7-21
-Date: 2009-03-29
+Version: 0.7-22
+Date: 2009-04-08
 Title: Tools for reading and handling spatial objects
 Encoding: latin1
 Author: Nicholas J. Lewin-Koh and Roger Bivand, contributions by Edzer
@@ -19,6 +19,6 @@ Description: Set of tools for manipulating and reading geographic data,
         with packages such as PBSmapping, spatstat, maps, RArcInfo,
         Stata tmap, WinBUGS, Mondrian, and others.
 License: GPL (>= 2)
-Packaged: Sun Mar 29 17:40:17 2009; rsb
+Packaged: Wed Apr 8 19:30:37 2009; rsb
 Repository: CRAN
-Date/Publication: 2009-03-29 18:11:52
+Date/Publication: 2009-04-14 17:31:54
